--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -131,17 +131,20 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
 allow 2602:fa59:5:915::1;
+allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -403,6 +406,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -413,8 +417,8 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
-allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -600,6 +604,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:5cc0:1:1::f7fe:6971;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
@@ -749,3 +754,4 @@ allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
+allow 2a14:c380:50:62::a;
