--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -77,6 +77,7 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.169.33.163;
 allow 109.237.27.11;
@@ -574,6 +575,7 @@ allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -872,6 +874,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
@@ -885,6 +888,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -928,6 +932,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1481,6 +1486,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
