--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -417,6 +417,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
+allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -661,7 +662,6 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:85c1:8d2:16d1::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
