--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -121,6 +121,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 131.72.79.38;
+deny 13.235.79.155;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -1225,6 +1226,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
+deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -1469,7 +1471,6 @@ deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
-deny 2a0f:85c1:8d2:16d1::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1686,7 +1687,6 @@ deny 45.84.107.55;
 deny 45.84.107.74;
 deny 45.84.107.76;
 deny 45.84.107.97;
-deny 45.86.153.106;
 deny 45.88.186.89;
 deny 45.88.186.92;
 deny 45.91.250.107;
@@ -1809,6 +1809,7 @@ deny 82.221.131.71;
 deny 82.221.131.86;
 deny 82.221.139.190;
 deny 82.29.128.145;
+deny 82.96.141.198;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
