--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -121,6 +121,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
+set_real_ip_from 13.235.79.155;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -1225,6 +1226,7 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9b85:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1469,7 +1471,6 @@ set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:16a4::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
-set_real_ip_from 2a0f:85c1:8d2:16d1::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1686,7 +1687,6 @@ set_real_ip_from 45.84.107.55;
 set_real_ip_from 45.84.107.74;
 set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.84.107.97;
-set_real_ip_from 45.86.153.106;
 set_real_ip_from 45.88.186.89;
 set_real_ip_from 45.88.186.92;
 set_real_ip_from 45.91.250.107;
@@ -1809,6 +1809,7 @@ set_real_ip_from 82.221.131.71;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.145;
+set_real_ip_from 82.96.141.198;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
